--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.0.0-rc.1",
     "sequelize": "^6.25.4"
   }
 }
